plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.12'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'kr.co.yourplanet'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-logging'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'    // spring boot 3.1.x 호환

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // QueryDsl
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'

    // AWS
    implementation(platform("software.amazon.awssdk:bom:2.21.1"))

    // s3
    implementation 'software.amazon.awssdk:s3'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // flyway
    implementation 'org.flywaydb:flyway-core'

    // Test
    testImplementation 'org.springframework.security:spring-security-test'

    // Test Containers
    testImplementation "org.testcontainers:junit-jupiter"
    testImplementation 'org.springframework.boot:spring-boot-testcontainers:3.2.12'
    testImplementation "org.testcontainers:postgresql"

    // Mock Server
    testImplementation 'com.squareup.okhttp3:mockwebserver'

    // Mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'
}

tasks.named('test') {
    useJUnitPlatform()
}